--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
 <body>
   <div class="main">
 
+
+    <div id="lucy">
+      <h1>LUCY<h1>    
+    </div>
+
+    <div id="bar">
+    </div>
+
     <div id="exercises">
-      <h1>Exercises</h1>
-      <a href="Exercises/CodingfromLifeResults/index.html" target="blank">Coding from Life</a>
+      <h2>exercises</h2>
+      <a href="Exercises/CodingfromLifeResults/index.html" target="blank">coding from life</a>
     </div>
     
     <div id="projects">
-      <h1>Projects</h1>
-      <a href="http://spring2016.veryinteractive.net/projects/republish-a-text" target="blank">Republish a Text</a><br>
-      <a href="http://spring2016.veryinteractive.net/projects/css-typeface" target="blank">CSS Typeface</a><br>
-      <a href="http://spring2016.veryinteractive.net/projects/hoax" target="blank">Hoax</a>
+
+      <h2>projects</h2>
+      <a href="http://spring2016.veryinteractive.net/projects/republish-a-text" target="blank">republish a text</a><br>
+      <a href="http://spring2016.veryinteractive.net/projects/css-typeface" target="blank">css typeface</a><br>
+      <a href="http://spring2016.veryinteractive.net/projects/hoax" target="blank">hoax</a>
     </div>
 
   </div>
