--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <div id="projects">
 
       <h2>projects</h2>
-      <a href="http://spring2016.veryinteractive.net/projects/republish-a-text" target="blank">republish a text</a><br>
+
+      <a href="http://www.floorplanner.com/projects/43103388-/editor" target="blank">republish a text (happy home)</a><br>
       <a href="http://spring2016.veryinteractive.net/projects/css-typeface" target="blank">css typeface</a><br>
       <a href="http://spring2016.veryinteractive.net/projects/hoax" target="blank">hoax</a>
     </div>
