--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
       <h2>projects</h2>
 
-      <a href="http://www.floorplanner.com/projects/43103388-/editor" target="blank">republish a text (happy home)</a><br>
+      <a href="http://www.floorplanner.com/projects/43103388-/editor" target="blank">project 1-happy home</a><br>
 
-      <a href="https://twitter.com/theperfman100" target="blank">republish a text (the perf man)</a><br>
+      <a href="https://twitter.com/theperfman100" target="blank">project 1 draft-the perf man</a><br>
 
       <a href="http://spring2016.veryinteractive.net/projects/css-typeface" target="blank">css typeface</a><br>
       <a href="http://spring2016.veryinteractive.net/projects/hoax" target="blank">hoax</a>
