--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
       <a href="proj2/typeideas.html" target="blank">css typeface</a><br>
 
+      <a href="proj2/index.html" target="blank">typeface draft</a><br>
+
       <a href="http://spring2016.veryinteractive.net/projects/hoax" target="blank">hoax</a>
     </div>
 
