--- a/proj2/index2.html
+++ b/proj2/index2.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-  <title>Play Ball</title>
+  <title>Alley Oop</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="css/styles2.css" type="text/css" />
+ <link rel="stylesheet" href="css/animate.css" type="text/css" />
+
 </head>
 
 <body>
@@ -12,7 +14,8 @@
 <div id="left">
 
 
-<div id="a">
+<div id="a1">
+<div id="ain">
 
 		<div class="ascircle">
 		</div>
@@ -38,8 +41,11 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+
+<div id="a2">
+<div id="ain">
 
 	<div class="brectangle">
 	</div>
@@ -51,8 +57,10 @@
 	</div>
 
 </div>	
+</div>
 
-<div id="a">
+<div id="a3">
+<div id="ain">
 
 	<div class="ccircle">
 	</div>
@@ -75,8 +83,10 @@
 
 
 </div>
+</div>
 
-<div id="a">
+<div id="a4">
+<div id="ain">
 	<div class="drectangle">
 	</div>
 
@@ -84,8 +94,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a5">
+<div id="ain">
 
 	<div class="drectangle">
 	</div>
@@ -101,8 +113,10 @@
 
 
 </div>
+</div>
 
-<div id="a">
+<div id="a6">
+<div id="ain">
 
 	<div class="drectangle">
 	</div>
@@ -114,8 +128,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a7">
+<div id="ain">
 
 	<div class="gcircle">
 	</div>
@@ -135,8 +151,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a8">
+<div id="ain">
 
 	<div class="drectangle">
 	</div>
@@ -148,15 +166,19 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a9">
+<div id="ain">
 
 	<div class="drectangle">
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a10">
+<div id="ain">
 
 	<div class="jcircle">
 	</div>
@@ -170,8 +192,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a7">
+<div id="ain">
 
 	<div class="brectangle">
 	</div>
@@ -183,8 +207,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a3">
+<div id="ain">
 
 	<div class="drectangle">
 	</div>
@@ -192,8 +218,10 @@
 	<div class="lrectangle">
 	</div>
 </div>
+</div>
 
-<div id="a">
+<div id="a9">
+<div id="ain">
 
 	<div class="brectangle">
 	</div>
@@ -205,8 +233,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a1">
+<div id="ain">
 
 		<div class="ncircle">
 		</div>
@@ -232,8 +262,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a6">
+<div id="ain">
 
 
 	<div class="ocircle">
@@ -258,8 +290,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a2">
+<div id="ain">
 
 	<div class="brectangle">
 	</div>
@@ -268,8 +302,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a8">
+<div id="ain">
 
 
 	<div class="ocircle">
@@ -291,8 +327,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a5">
+<div id="ain">
 
 	<div class="brectangle">
 	</div>
@@ -311,8 +349,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a9">
+<div id="ain">
 	<div class="scircle">
 	</div>
 
@@ -333,8 +373,10 @@
 
 
 </div>
+</div>
 
-<div id="a">
+<div id="a10">
+<div id="ain">
 
 	<div class="trectangle1">
 	</div>
@@ -343,8 +385,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a2">
+<div id="ain">
 
 	<div id="uflip">
 
@@ -375,8 +419,10 @@
 
 
 </div>
+</div>
 
-<div id="a">
+<div id="a1">
+<div id="ain">
 
 	<div class="vrectangle1">
 	</div>
@@ -388,8 +434,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a8">
+<div id="ain">
 
 	<div id="uflip">
 
@@ -405,8 +453,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a4">
+<div id="ain">
 	
 	<div class="half">
 
@@ -448,8 +498,10 @@
 		</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a10">
+<div id="ain">
 
 	<div class="yrectangle3">
 	</div>
@@ -465,8 +517,10 @@
 
 
 </div>
+</div>
 
-<div id="a">
+<div id="a7">
+<div id="ain">
 
 	<div id="zflip">
 
@@ -494,11 +548,13 @@
 
 
 </div>
+</div>
 
 <div id="right">
 
 
-<div id="a">
+<div id="a1">
+<div id="ain">
 
 	<div class="onerectangle">
 	</div>
@@ -507,8 +563,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a2">
+<div id="ain">
 
 	<div class="tworectangle">
 	</div>
@@ -524,8 +582,10 @@
 
 
 </div>
+</div>
 
-<div id="a">
+<div id="a3">
+<div id="ain">
 
 	<div id="threeflip">
 
@@ -554,8 +614,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a4">
+<div id="ain">
 
 	<div id="uflip">
 
@@ -584,8 +646,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a5">
+<div id="ain">
 
 	<div class="fiverectangle">
 	</div>
@@ -600,8 +664,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a6">
+<div id="ain">
 
 	<div class="sixcircle">
 	</div>
@@ -621,8 +687,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a7">
+<div id="ain">
 
 	<div id="threeflip">
 
@@ -635,8 +703,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a8">
+<div id="ain">
 
 	<div class="eightcircle">
 	</div>
@@ -645,8 +715,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a9">
+<div id="ain">
 
 	<div id="threeflip">
 
@@ -659,8 +731,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a10">
+<div id="ain">
 
 
 	<div class="ocircle">
@@ -682,8 +756,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a1">
+<div id="ain">
 
 	<div class="qmarkrectangle">
 	</div>
@@ -698,8 +774,10 @@
 	</div>
 
 </div>
+</div>
 
-<div id="a">
+<div id="a7">
+<div id="ain">
 
 	<div class="qmarkrectangle">
 	</div>
@@ -708,6 +786,7 @@
 	</div>
 
 
+</div>
 </div>
 
 </div>
