--- a/proj2/index3.html
+++ b/proj2/index3.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
-  <title>Play Ball</title>
+  <title>Alley Oop</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="css/styles3.css" type="text/css" />
+
+  <link rel="stylesheet" href="css/animate.css" type="text/css" />
+
 </head>
 
 <body>
-
-<div id="move">
 
 	<div id="pass">
 
@@ -257,7 +258,29 @@
 
 </div>
 
-</div>
+
+<a href="index2.html">
+
+	<div id="balllink">
+		<div class="clickcircle">
+	<div class="ballline1">
+	</div>
+
+	<div class="ballline2">
+	</div>
+
+	<div class="clickcircle1">
+	</div>
+
+	<div class="clickcircle2">
+	</div>
+
+
+		</div>
+
+	</div>
+
+</a>
 
 </body>
 
