--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
       <a href="https://twitter.com/theperfman100" target="blank">draft: the perf man</a><br>
 
-      <a href="proj2/typeideas.html" target="blank">css typeface</a><br>
+      <a href="proj2/index3.html" target="blank">css typeface</a><br>
+
+      <a href="proj2/typeideas.html" target="blank">typeface sketch</a><br>
 
       <a href="proj2/index.html" target="blank">typeface draft</a><br>
 
