--- a/proj2/index2.html
+++ b/proj2/index2.html
@@ -789,6 +789,21 @@
 </div>
 </div>
 
+<div id="a1">
+<div id="ain">
+</div>
+</div>
+
+<div id="a1">
+<div id="ain">
+</div>
+</div>
+
+<div id="a1">
+<div id="ain">
+</div>
+</div>
+
 </div>
 
 
