--- a/proj2/index2.html
+++ b/proj2/index2.html
@@ -130,7 +130,7 @@
 </div>
 </div>
 
-<div id="a7">
+<div id="a9">
 <div id="ain">
 
 	<div class="gcircle">
@@ -168,7 +168,7 @@
 </div>
 </div>
 
-<div id="a9">
+<div id="a7">
 <div id="ain">
 
 	<div class="drectangle">
@@ -194,7 +194,7 @@
 </div>
 </div>
 
-<div id="a7">
+<div id="a1">
 <div id="ain">
 
 	<div class="brectangle">
@@ -220,7 +220,7 @@
 </div>
 </div>
 
-<div id="a9">
+<div id="a6">
 <div id="ain">
 
 	<div class="brectangle">
@@ -264,7 +264,7 @@
 </div>
 </div>
 
-<div id="a6">
+<div id="a4">
 <div id="ain">
 
 
@@ -351,7 +351,7 @@
 </div>
 </div>
 
-<div id="a9">
+<div id="a1">
 <div id="ain">
 	<div class="scircle">
 	</div>
@@ -421,7 +421,7 @@
 </div>
 </div>
 
-<div id="a1">
+<div id="a6">
 <div id="ain">
 
 	<div class="vrectangle1">
@@ -500,7 +500,7 @@
 </div>
 </div>
 
-<div id="a10">
+<div id="a9">
 <div id="ain">
 
 	<div class="yrectangle3">
@@ -789,20 +789,50 @@
 </div>
 </div>
 
-<div id="a1">
+<div id="a5">
 <div id="ain">
+
+	<div class="qmarkrectangle">
+	</div>
 </div>
 </div>
 
-<div id="a1">
+<div id="a2">
 <div id="ain">
+
+	<div class="comma">
+	</div>
+
 </div>
 </div>
 
-<div id="a1">
+<div id="a7">
 <div id="ain">
+
+<div id="threeflip">
+
+<div class="quota">
+	</div>
+<div class="quota1">
+	</div>
+
+</div>
+
 </div>
 </div>
+
+<div id="a6">
+<div id="ain">
+
+<div class="quota">
+	</div>
+<div class="quota1">
+	</div>
+
+</div>
+</div>
+
+
 
 </div>
 
