--- a/proj2/index3.html
+++ b/proj2/index3.html
@@ -12,257 +12,196 @@
 
 <body>
 
-	<div id="pass">
+<div class="container">
 
-	<div id="a">
+	<div id="dribble">
 
-	<div class="brectangle">
+	<div id="ain1">
+	<div class="drectangle">
+	</div>
+	<div class="dcircle">
+	</div>
 	</div>
 
+	<div id="ain">
+	<div class="brectangle">
+	</div>
 	<div class="bscircle">
 	</div>
-
-</div>
-
-<div id="a">
-
-		<div class="ascircle">
-		</div>
-
-	<div id="al">
-
-		<div class="arectangle">
-		</div>
-
-		<div class="ahalfline">
-		</div>
-
-	</div>
-
-	<div id="ar">
-
-		<div class="arectangle2">
-		</div>
-
-		<div class="ahalfline2">
-		</div>
-
-	</div>
-
-</div>
-
-<div id="a">
-	<div class="scircle">
-	</div>
-
-	<div class="scircle2">
-	</div>
-
-	<div class="ssquare">
-	</div>
-
-	<div class="ssquare2">
-	</div>
-
-	<div class="sline">
-	</div>
-
-	<div class="sline2">
-	</div>
-
-</div>
-
-<div id="a">
-	<div class="scircle">
-	</div>
-
-	<div class="scircle2">
-	</div>
-
-	<div class="ssquare">
-	</div>
-
-	<div class="ssquare2">
-	</div>
-
-	<div class="sline">
-	</div>
-
-	<div class="sline2">
-	</div>
-
-</div>
-
-</div>
-
-<div id="me">
-
-<div id="a">
-
-	<div class="brectangle">
-	</div>
-
-	<div class="mrectangle">
-	</div>
-
-	<div class="mcircle">
-	</div>
-
-</div>
-
-<div id="a">
-
-	<div class="drectangle">
-	</div>
-
-	<div class="erectangle1">
-	</div>
-
-	<div class="erectangle2">
-	</div>
-
-	<div class="erectangle3">
-	</div>
-
-</div>
-
-</div>
-
-<div id="the">
-
-<div id="a">
-
-	<div class="trectangle1">
-	</div>
-
-	<div class="trectangle2">
-	</div>
-
-</div>
-
-
-<div id="a">
-
-	<div class="drectangle">
-	</div>
-
-	<div class="hrectangle1">
-	</div>
-
-	<div class="hrectangle">
-	</div>
-
-</div>
-
-<div id="a">
-
-	<div class="drectangle">
-	</div>
-
-	<div class="erectangle1">
-	</div>
-
-	<div class="erectangle2">
-	</div>
-
-	<div class="erectangle3">
-	</div>
-
-</div>
-
-</div>
-
-<div id="rock">
-
-<div id="a">
-
-	<div class="brectangle">
-	</div>
-
-	<div class="bscircle">
-	</div>
-
 	<div id="rr">
-
 		<div class="rrectangle">
 		</div>
 
 		<div class="rhalfline">
 		</div>
-
+	</div>
 	</div>
 
-</div>
-
-<div id="a">
-
-
-	<div class="ocircle">
+	<div id="aini">
+	<div class="irectangle">
+	</div>
 	</div>
 
-	<div class="cover">
-	</div>
-
-	<div class="cover1">
-	</div>
-
-	<div class="oline">
-	</div>
-
-	<div class="oline2">
-	</div>
-
-	<div class="oline3">
-	</div>
-
-	<div class="oline4">
-	</div>
-
-</div>
-
-<div id="a">
-
-	<div class="ccircle">
-	</div>
-
-
-	<div class="crectangle">
-	</div>
-
-	<div class="crectangle2">
-	</div>
-
-	<div class="csquare">
-	</div>
-
-	<div class="csquare2">
-	</div>
-
-	<div class="chalfline">
-	</div>
-
-</div>
-
-<div id="a">
-
+	<div id="ain">
 	<div class="brectangle">
 	</div>
+	<div class="bscircle">
+	</div>
+	<div class="bscircle2">
+	</div>
+	</div>
 
+	<div id="ain">
+	<div class="brectangle">
+	</div>
+	<div class="bscircle">
+	</div>
+	<div class="bscircle2">
+	</div>
+	</div>
+
+	<div id="ain">
+	<div class="drectangle">
+	</div>
+	<div class="lrectangle">
+	</div>
+	</div>	
+
+	<div id="ain">
+	<div class="drectangle">
+	</div>
+	<div class="erectangle1">
+	</div>
+	<div class="erectangle2">
+	</div>
+	<div class="erectangle3">
+	</div>
+	</div>
+
+	</div>
+
+</div>
+
+<div class="container">
+
+	<div id="pivot">
+
+	<div id="ain1p">
+	<div class="brectangle">
+	</div>
+	<div class="bscircle">
+	</div>
+	</div>
+
+	<div id="ainip">
+	<div class="irectangle">
+	</div>
+	</div>
+
+	<div id="ainp">
+	<div class="vrectangle1">
+	</div>
+	<div class="vrectangle2">
+	</div>
+	
+	</div>
+	
+	<div id="ainp">
+	<div class="ocircle">
+	</div>
+	<div class="cover">
+	</div>
+	<div class="cover1">
+	</div>
+	<div class="oline">
+	</div>
+	<div class="oline2">
+	</div>
+	<div class="oline3">
+	</div>
+	<div class="oline4">
+	</div>
+	</div>
+
+	<div id="ainp">
+	<div class="trectangle1">
+	</div>
+	<div class="trectangle2">
+	</div>
+	<div class="vrectangle4">
+	</div>
+	</div>
+
+</div>
+
+</div>
+
+<div class="containerd">
+
+	<div id="ain1d">
+	<div class="drectangle">
+	</div>
+	<div class="dcircle">
+	</div>
+	</div>
+
+	<div id="aind">
+	<div id="uflip">
+		<div class="ncircle">
+		</div>
+
+	<div id="al">
+		<div class="arectangle">
+		</div>
+		<div class="ahalfline">
+		</div>
+	</div>
+	<div id="ar">
+		<div class="arectangle2">
+		</div>
+		<div class="ahalfline2">
+		</div>
+	</div>
+	</div>
+	</div>
+
+	<div id="aind">
+		<div class="ncircle">
+		</div>
+	<div id="al">
+		<div class="arectangle">
+		</div>
+		<div class="ahalfline">
+		</div>
+	</div>
+	<div id="ar">
+		<div class="arectangle2">
+		</div>
+		<div class="ahalfline2">
+		</div>
+	</div>
+	</div>
+
+	<div id="aind">
+	<div class="brectangle">
+	</div>
 	<div class="kcircle">
 	</div>
-
 	<div class="kcircle2">
+	</div>
 	</div>
 
 </div>
 
-</div>
 
+<div class="container1">
 
 <a href="index2.html">
 
 	<div id="balllink">
-		<div class="clickcircle">
+	
+	<div class="clickcircle">
+	
 	<div class="ballline1">
 	</div>
 
@@ -276,11 +215,13 @@
 	</div>
 
 
-		</div>
+	</div>
 
 	</div>
 
 </a>
+
+</div>
 
 </body>
 
