--- a/proj2/index3.html
+++ b/proj2/index3.html
@@ -196,6 +196,86 @@
 
 <div class="container1">
 
+	<div id="ain1a">
+
+	<div class="brectangle">
+	</div>
+
+	<div class="bscircle">
+	</div>
+
+	</div>
+
+	<div id="aina">
+
+		<div class="ascircle">
+		</div>
+
+	<div id="al">
+
+		<div class="arectangle">
+		</div>
+
+		<div class="ahalfline">
+		</div>
+
+	</div>
+
+	<div id="ar">
+
+		<div class="arectangle2">
+		</div>
+
+		<div class="ahalfline2">
+		</div>
+
+	</div>
+
+	</div>
+
+	<div id="aina">
+	<div class="scircle">
+	</div>
+
+	<div class="scircle2">
+	</div>
+
+	<div class="ssquare">
+	</div>
+
+	<div class="ssquare2">
+	</div>
+
+	<div class="sline">
+	</div>
+
+	<div class="sline2">
+	</div>
+
+	</div>
+
+	<div id="ain2a">
+	<div class="scircle">
+	</div>
+
+	<div class="scircle2">
+	</div>
+
+	<div class="ssquare">
+	</div>
+
+	<div class="ssquare2">
+	</div>
+
+	<div class="sline">
+	</div>
+
+	<div class="sline2">
+	</div>
+
+	</div>
+
+
 <a href="index2.html">
 
 	<div id="balllink">
@@ -214,11 +294,9 @@
 	<div class="clickcircle2">
 	</div>
 
-
 	</div>
 
 	</div>
-
 </a>
 
 </div>
