--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <div id="exercises">
       <h2>exercises</h2>
       <a href="exercise-codingfromlife/index.html" target="blank">coding from life</a>
+
+      <a href="exercises/hover/index.html" target="blank"> hover states</a>
+      <br>
+
+      <a href="exercises/starter-kit/index.html" target="blank"> hover confusion</a>
     </div>
     
     <div id="projects">
@@ -37,7 +42,7 @@
 
       <a href="proj2/index.html" target="blank">typeface draft</a><br>
 
-      <a href="http://spring2016.veryinteractive.net/projects/hoax" target="blank">hoax</a>
+      <a href="proj3/index" target="blank">Tom Sachs Space Program</a>
     </div>
 
   </div>
