--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <a href="proj2/index.html" target="blank">typeface draft</a><br>
 
-      <a href="proj3/index" target="blank">Tom Sachs Space Program</a>
+      <a href="proj3/index" target="blank">tom sachs space program</a>
     </div>
 
   </div>
