--- a/proj3/index.html
+++ b/proj3/index.html
@@ -189,6 +189,9 @@
         <img src="images/vader.png" style="height:350px"  onmouseover="this.src='images/vader2.png'" style="height:350px" onmouseout="this.src='images/vader.png'" style="height:350px" /></a>
       </div>
 
+      <div class="vaderlabel">Vader Fridge, 2009<br><br>Budweiser, steel, mixed media
+      </div>
+
 
     
 
