--- a/proj3/index.html
+++ b/proj3/index.html
@@ -233,7 +233,7 @@
     
     <div class="item d">
 
-    <IMG STYLE="position:absolute; TOP:-20px; LEFT:10px; WIDTH:280px;" SRC="images/europa.png">
+    <a href="https://www.ybca.org/"><IMG STYLE="position:absolute; TOP:-20px; LEFT:10px; WIDTH:280px;" SRC="images/europa.png"></a>
 
         <div class="about">
           In this third mission of his Space Program, Tom Sachs takes us to Europa, the icy moon of Jupiter, whose ocean is twice the size of those on Earth, and the most likely place in the outer solar system to host life. The Sachs Studio brings the best and the worst of us: the Japanese tea ceremony and colonialist hubris, the Landing Excursion Module (LEM) and trash, Isamu Noguchi and resource depletion. <span class="blue">The journey is powered equally by scientific exploration and imperialist desire.</span>
